resolving some code smells